--- a/builtin.ipynb
+++ b/builtin.ipynb
@@ -40,7 +40,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sum(num1, num2):\n",
+    "    print(f\"{num1} + {num2}\")\n",
+    "    return num1 + num2\n",
+    "def sub(num1, num2):\n",
+    "    print(f\"{num1} - {num2}\")\n",
+    "    return num1 - num2\n",
+    "def mul(num1, num2):\n",
+    "    print(f\"{num1} * {num2}\")\n",
+    "    return num1 * num2\n",
+    "def div(num1, num2):\n",
+    "    print(f\"{num1} / {num2}\")\n",
+    "    return num1 / num2\n",
+    "operator = {'1': sum, '2': sub, '3': mul, '4': div}\n",
+    "select = input(\"연산 선택(1: 덧셈, 2: 뺄셈, 3: 곱셈, 4: 나눗셈): \")\n",
+    "if len(select) == 1 and select >= '1' and select <= '4':\n",
+    "    num1 = int(input(\"숫자 1: \"))\n",
+    "    num2 = int(input(\"숫자 2: \"))\n",
+    "    operator[select](num1, num2)\n",
+    "else:\n",
+    "    print(\"잘못된 입력\")\n"
+   ]
   },
   {
    "attachments": {},
@@ -64,7 +85,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inputstr = input(\"문자열을 입력하세요: \")\n",
+    "print(dict(list(map(lambda x: x.split('='), inputstr.split('&')))))"
+   ]
   }
  ],
  "metadata": {
