--- a/class.ipynb
+++ b/class.ipynb
@@ -137,13 +137,14 @@
     "        self.avg_score = avg_score\n",
     "    \n",
     "    def get_info(self):\n",
-    "        return f\"name: {self.name}, student_id: {self.student_id}, year: {self.year}, major: {self.major}, avg_score: {self.avg_score}\"\n",
+    "        return f\"이름: {self.name}, 학번: {self.student_id}, 학년: {self.year}, 전공: {self.major}, 평점: {self.avg_score}\"\n",
     "\n",
     "class StudentManager:\n",
     "    def __init__(self):\n",
     "        self.student_list = []\n",
     "    \n",
     "    def add_student(self, student):\n",
+    "        print(student.get_info())\n",
     "        self.student_list.append(student)\n",
     "    \n",
     "    def remove_student(self, student_id):\n",
@@ -195,8 +196,10 @@
     "\n",
     "stuman = StudentManager()\n",
     "students = [Student(randstr(), randint(1000, 9999), randint(1, 4), randstr(), round(random() * 4.5, 2)) for i in range(7)]\n",
+    "print(\"add\")\n",
     "for student in students:\n",
     "    stuman.add_student(student)\n",
+    "print()\n",
     "print(\"remove\")\n",
     "stuman.remove_student(students[4].student_id)\n",
     "print(\"find\")\n",
