--- a/graph.ipynb
+++ b/graph.ipynb
@@ -19,6 +19,9 @@
     "months = np.arange(1, 13)  # 월별 데이터\n",
     "sales = np.array([120, 145, 98, 156, 104, 176, 155, 140, 135, 120, 148, 170])  # 월별 판매량\n",
     "plt.plot(months, sales, marker = 'o')\n",
+    "plt.xlabel('Months')\n",
+    "plt.ylabel('Sales')\n",
+    "plt.title('Monthly Sales Performance')\n",
     "plt.show()"
    ]
   },
@@ -31,8 +34,12 @@
     "months = np.arange(1, 13)  # 월별 데이터\n",
     "product1_sales = np.array([120, 145, 98, 156, 104, 176, 155, 140, 135, 120, 148, 170])  # 물건 1 월별 판매량\n",
     "product2_sales = np.array([90, 110, 80, 120, 105, 140, 130, 125, 115, 100, 130, 150])  # 물건 2 월별 판매량\n",
-    "plt.plot(months, product1_sales, marker = 'o')\n",
-    "plt.plot(months, product2_sales, marker = 'o')\n",
+    "plt.plot(months, product1_sales, marker = 'o', label = 'Product 1')\n",
+    "plt.plot(months, product2_sales, marker = 'o', label = 'Product 2')\n",
+    "plt.xlabel('Months')\n",
+    "plt.ylabel('Sales')\n",
+    "plt.title('Monthly Sales Performance')\n",
+    "plt.legend(loc = 'upper left')\n",
     "plt.show()"
    ]
   },
@@ -47,9 +54,13 @@
     "gdp_b = np.array([80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180])  # B 나라의 연도별 GDP\n",
     "gdp_c = np.array([200, 220, 240, 250, 260, 270, 280, 290, 300, 310, 320])  # C 나라의 연도별 GDP\n",
     "plt.figure().add_axes([0,0,1,1])\n",
-    "plt.bar(years - 0.25, gdp_a, width = 0.25)\n",
-    "plt.bar(years, gdp_b, width = 0.25)\n",
-    "plt.bar(years + 0.25, gdp_c, width = 0.25)\n",
+    "plt.bar(years - 0.25, gdp_a, width = 0.25, label = 'Country A')\n",
+    "plt.bar(years, gdp_b, width = 0.25, label = 'Country B')\n",
+    "plt.bar(years + 0.25, gdp_c, width = 0.25, label = 'Country C')\n",
+    "plt.xlabel('Years')\n",
+    "plt.ylabel('GDP(in billions)')\n",
+    "plt.title('GDP Comparison by Country')\n",
+    "plt.legend(loc = 'upper left')\n",
     "plt.show()"
    ]
   },
@@ -66,12 +77,25 @@
     "plt.figure()\n",
     "ax1 = plt.subplot2grid((3, 3), (0, 0), 1, 3)\n",
     "ax1.plot(years, gdp, marker = 'o')\n",
+    "ax1.set_title('GDP')\n",
+    "ax1.set_xlabel('Years')\n",
+    "ax1.set_ylabel('GDP(in billions)')\n",
     "ax2 = plt.subplot2grid((3, 3), (1, 0), 1, 2)\n",
     "ax2.bar(years, sales)\n",
+    "ax2.set_title('Sales')\n",
+    "ax2.set_xlabel('Years')\n",
+    "ax2.set_ylabel('Quantity Sold')\n",
     "ax3 = plt.subplot2grid((3, 3), (2, 0), 1, 2)\n",
     "ax3.plot(years, sales, marker = 'o')\n",
+    "ax3.set_title('Sales')\n",
+    "ax3.set_xlabel('Years')\n",
+    "ax3.set_ylabel('Quantity Sold')\n",
     "ax4 = plt.subplot2grid((3, 3), (1, 2), 2, 1)\n",
     "ax4.scatter(years, prices)\n",
+    "ax4.set_title('Prices')\n",
+    "ax4.set_xlabel('Years')\n",
+    "ax4.set_ylabel('Price')\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   }
